Added Social Media (BPS)

--- a/src/app/home/home.page.css
+++ b/src/app/home/home.page.css
@@ -140,6 +140,57 @@ ion-content main section#hero .item {
 ion-content main section#hero .item__header {
   font-size: 5rem;
 }
+ion-content main section#hero .item__header span span {
+  position: relative;
+}
+ion-content main section#hero .item__header span span.active .soc__med .soc {
+  opacity: 1;
+  pointer-events: all;
+}
+ion-content main section#hero .item__header span span.active .soc__med .soc i {
+  color: var(--primary-color);
+  font-size: 3rem;
+}
+ion-content main section#hero .item__header span span.active .soc__med .soc:first-child {
+  bottom: 5rem;
+  left: 6rem;
+  transform: translate(50%, 50%);
+}
+ion-content main section#hero .item__header span span.active .soc__med .soc:nth-child(2) {
+  bottom: 0rem;
+  left: 8rem;
+  transform: translate(50%, 50%);
+}
+ion-content main section#hero .item__header span span.active .soc__med .soc:nth-child(3) {
+  bottom: -5rem;
+  left: 6rem;
+  transform: translate(50%, 50%);
+}
+ion-content main section#hero .item__header span span .soc__med {
+  position: absolute;
+  right: 50%;
+  top: 55%;
+  transform: translate(55%, -50%);
+}
+ion-content main section#hero .item__header span span .soc__med .soc {
+  opacity: 0;
+  animation: fade-out-display 0.5s linear;
+  position: absolute;
+  aspect-ratio: 1;
+  padding: 0.25rem;
+  transition: 0.4s;
+  align-items: center;
+  justify-content: center;
+  bottom: 0;
+  left: 0;
+  transform: translate(-40%, 60%);
+  pointer-events: none;
+}
+ion-content main section#hero .item__header span span .soc__med .soc i {
+  transition: color 0.1s, font-size 0.3s;
+  color: var(--tertiary-color);
+  font-size: 0rem;
+}
 ion-content main section#hero .item__subheader {
   font-size: 1.5rem;
   width: 60%;
