--- a/src/global.css
+++ b/src/global.css
@@ -103,65 +103,65 @@
   height: 0;
   border-top: 1px solid transparent;
   border-bottom: 1px solid transparent;
-  border-right: 180px solid #fff;
+  border-right: 135px solid #fff;
   -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
      border-image: linear-gradient(to left, #fff, transparent) 1 100%;
   border-radius: 0 2px 2px 0;
   transform: rotate(30deg);
   position: absolute;
   top: 72%;
-  left: 54%;
+  left: 98%;
   opacity: 0;
-  animation: shooting 14s linear infinite;
-  animation-delay: 1s;
+  animation: shooting 13s linear infinite;
+  animation-delay: 8s;
 }
 .meteors .meteor:nth-child(2) {
   width: 0;
   height: 0;
   border-top: 1px solid transparent;
   border-bottom: 1px solid transparent;
-  border-right: 179px solid #fff;
+  border-right: 167px solid #fff;
   -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
      border-image: linear-gradient(to left, #fff, transparent) 1 100%;
   border-radius: 0 2px 2px 0;
   transform: rotate(30deg);
   position: absolute;
-  top: 39%;
-  left: 93%;
+  top: 69%;
+  left: 44%;
   opacity: 0;
-  animation: shooting 10s linear infinite;
-  animation-delay: 9s;
+  animation: shooting 7s linear infinite;
+  animation-delay: 6s;
 }
 .meteors .meteor:nth-child(3) {
   width: 0;
   height: 0;
   border-top: 1px solid transparent;
   border-bottom: 1px solid transparent;
-  border-right: 163px solid #fff;
+  border-right: 199px solid #fff;
   -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
      border-image: linear-gradient(to left, #fff, transparent) 1 100%;
   border-radius: 0 2px 2px 0;
   transform: rotate(30deg);
   position: absolute;
-  top: 1%;
-  left: 55%;
+  top: 23%;
+  left: 97%;
   opacity: 0;
-  animation: shooting 9s linear infinite;
-  animation-delay: 10s;
+  animation: shooting 8s linear infinite;
+  animation-delay: 11s;
 }
 .meteors .meteor:nth-child(4) {
   width: 0;
   height: 0;
   border-top: 1px solid transparent;
   border-bottom: 1px solid transparent;
-  border-right: 181px solid #fff;
+  border-right: 124px solid #fff;
   -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
      border-image: linear-gradient(to left, #fff, transparent) 1 100%;
   border-radius: 0 2px 2px 0;
   transform: rotate(30deg);
   position: absolute;
-  top: 61%;
-  left: 88%;
+  top: 25%;
+  left: 100%;
   opacity: 0;
   animation: shooting 8s linear infinite;
   animation-delay: 1s;
@@ -171,67 +171,67 @@
   height: 0;
   border-top: 1px solid transparent;
   border-bottom: 1px solid transparent;
-  border-right: 145px solid #fff;
+  border-right: 180px solid #fff;
   -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
      border-image: linear-gradient(to left, #fff, transparent) 1 100%;
   border-radius: 0 2px 2px 0;
   transform: rotate(30deg);
   position: absolute;
-  top: 14%;
-  left: 49%;
+  top: 8%;
+  left: 58%;
   opacity: 0;
-  animation: shooting 9s linear infinite;
-  animation-delay: 10s;
+  animation: shooting 11s linear infinite;
+  animation-delay: 3s;
 }
 .meteors .meteor:nth-child(6) {
   width: 0;
   height: 0;
   border-top: 1px solid transparent;
   border-bottom: 1px solid transparent;
-  border-right: 145px solid #fff;
+  border-right: 118px solid #fff;
   -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
      border-image: linear-gradient(to left, #fff, transparent) 1 100%;
   border-radius: 0 2px 2px 0;
   transform: rotate(30deg);
   position: absolute;
-  top: 66%;
-  left: 83%;
+  top: 13%;
+  left: 71%;
   opacity: 0;
-  animation: shooting 10s linear infinite;
-  animation-delay: 1s;
+  animation: shooting 13s linear infinite;
+  animation-delay: 2s;
 }
 .meteors .meteor:nth-child(7) {
   width: 0;
   height: 0;
   border-top: 1px solid transparent;
   border-bottom: 1px solid transparent;
-  border-right: 144px solid #fff;
+  border-right: 105px solid #fff;
   -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
      border-image: linear-gradient(to left, #fff, transparent) 1 100%;
   border-radius: 0 2px 2px 0;
   transform: rotate(30deg);
   position: absolute;
-  top: 31%;
-  left: 44%;
+  top: 39%;
+  left: 60%;
   opacity: 0;
-  animation: shooting 13s linear infinite;
-  animation-delay: 10s;
+  animation: shooting 8s linear infinite;
+  animation-delay: 7s;
 }
 .meteors .meteor:nth-child(8) {
   width: 0;
   height: 0;
   border-top: 1px solid transparent;
   border-bottom: 1px solid transparent;
-  border-right: 159px solid #fff;
+  border-right: 82px solid #fff;
   -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
      border-image: linear-gradient(to left, #fff, transparent) 1 100%;
   border-radius: 0 2px 2px 0;
   transform: rotate(30deg);
   position: absolute;
-  top: 48%;
-  left: 48%;
+  top: 74%;
+  left: 85%;
   opacity: 0;
-  animation: shooting 8s linear infinite;
+  animation: shooting 9s linear infinite;
   animation-delay: 7s;
 }
 .meteors .meteor:nth-child(9) {
@@ -239,67 +239,67 @@
   height: 0;
   border-top: 1px solid transparent;
   border-bottom: 1px solid transparent;
-  border-right: 133px solid #fff;
+  border-right: 184px solid #fff;
   -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
      border-image: linear-gradient(to left, #fff, transparent) 1 100%;
   border-radius: 0 2px 2px 0;
   transform: rotate(30deg);
   position: absolute;
-  top: 31%;
-  left: 43%;
+  top: 59%;
+  left: 55%;
   opacity: 0;
-  animation: shooting 13s linear infinite;
-  animation-delay: 12s;
+  animation: shooting 8s linear infinite;
+  animation-delay: 9s;
 }
 .meteors .meteor:nth-child(10) {
   width: 0;
   height: 0;
   border-top: 1px solid transparent;
   border-bottom: 1px solid transparent;
-  border-right: 100px solid #fff;
+  border-right: 149px solid #fff;
   -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
      border-image: linear-gradient(to left, #fff, transparent) 1 100%;
   border-radius: 0 2px 2px 0;
   transform: rotate(30deg);
   position: absolute;
-  top: 42%;
-  left: 57%;
+  top: 65%;
+  left: 76%;
   opacity: 0;
   animation: shooting 12s linear infinite;
-  animation-delay: 3s;
+  animation-delay: 11s;
 }
 .meteors .meteor:nth-child(11) {
   width: 0;
   height: 0;
   border-top: 1px solid transparent;
   border-bottom: 1px solid transparent;
-  border-right: 96px solid #fff;
+  border-right: 92px solid #fff;
   -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
      border-image: linear-gradient(to left, #fff, transparent) 1 100%;
   border-radius: 0 2px 2px 0;
   transform: rotate(30deg);
   position: absolute;
-  top: 53%;
-  left: 85%;
+  top: 48%;
+  left: 43%;
   opacity: 0;
-  animation: shooting 7s linear infinite;
-  animation-delay: 1s;
+  animation: shooting 8s linear infinite;
+  animation-delay: 5s;
 }
 .meteors .meteor:nth-child(12) {
   width: 0;
   height: 0;
   border-top: 1px solid transparent;
   border-bottom: 1px solid transparent;
-  border-right: 108px solid #fff;
+  border-right: 167px solid #fff;
   -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
      border-image: linear-gradient(to left, #fff, transparent) 1 100%;
   border-radius: 0 2px 2px 0;
   transform: rotate(30deg);
   position: absolute;
-  top: 30%;
-  left: 98%;
+  top: 28%;
+  left: 97%;
   opacity: 0;
-  animation: shooting 8s linear infinite;
+  animation: shooting 12s linear infinite;
   animation-delay: 2s;
 }
 
@@ -541,5 +541,27 @@
   100% {
     opacity: 0;
     transform: translateY(55px) scale3d(0.5, 0.5, 0.5);
+  }
+}
+@keyframes fade-out-display {
+  0% {
+    opacity: 1;
+  }
+  5% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+@keyframes fade-in-display {
+  0% {
+    opacity: 0;
+  }
+  5% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 1;
   }
 }/*# sourceMappingURL=global.css.map */
