--- a/src/global.scss
+++ b/src/global.scss
@@ -495,3 +495,27 @@ $color_meteor: #fff;
     transform: translateY(55px) scale3d(0.5, 0.5, 0.5);
   }
 }
+
+@keyframes fade-out-display {
+  0% {
+    opacity: 1;
+  }
+  5% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+@keyframes fade-in-display {
+  0% {
+    opacity: 0;
+  }
+  5% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 1;
+  }
+}
