--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -191,70 +191,118 @@ ion-content {
             font-size: 5rem;
 
             span {
+              position: relative;
+              // z-index: 2;
+
               span {
                 position: relative;
 
-                &.active {
+                strong {
+                  cursor: pointer;
+                  position: relative;
+                  z-index: 2;
+                }
+
+                &:has(strong.active) {
                   .soc__med {
+                    transform: translate(55%, -50%) rotate(-90deg);
+                    backdrop-filter: blur(1rem);
+                    -webkit-backdrop-filter: blur(1rem);
+                    // background-color: #ffffff1a;
+
                     .soc {
                       opacity: 1;
                       pointer-events: all;
+                      transition: opacity 0.4s;
+                      backdrop-filter: blur(50%);
+                      -webkit-backdrop-filter: blur(50%);
+                      border-radius: 50%;
+                      background-color: rgba(30, 41, 59, 0.5);
 
                       i {
+                        transition: color 0.5s, font-size 1s;
                         color: var(--primary-color);
                         font-size: 3rem;
                       }
 
-                      &:first-child {
-                        bottom: 5rem;
-                        left: 6rem;
-                        transform: translate(50%, 50%);
-                      }
+                      // &:first-child {
+                      //   bottom: 5rem;
+                      //   left: 6rem;
+                      //   transform: translate(50%, 50%);
+                      // }
 
-                      &:nth-child(2) {
-                        bottom: 0rem;
-                        left: 8rem;
-                        transform: translate(50%, 50%);
-                      }
+                      // &:nth-child(2) {
+                      //   bottom: 0rem;
+                      //   left: 8rem;
+                      //   transform: translate(50%, 50%);
+                      // }
 
-                      &:nth-child(3) {
-                        bottom: -5rem;
-                        left: 6rem;
-                        transform: translate(50%, 50%);
-                      }
+                      // &:nth-child(3) {
+                      //   bottom: -5rem;
+                      //   left: 6rem;
+                      //   transform: translate(50%, 50%);
+                      // }
                     }
                   }
                 }
 
                 .soc__med {
-                  // width: 20rem;
-                  // border: 2px solid;
-                  // border-radius: 50%;
-                  // aspect-ratio: 1;
+                  width: 14rem;
+                  border: 2px solid transparent;
+                  border-left: 2px solid #ffffff1a;
+                  border-right: 2px solid #ffffff1a;
+                  border-bottom: 2px solid #ffffff1a;
+                  border-radius: 50%;
+                  aspect-ratio: 1;
 
                   position: absolute;
-                  right: 50%;
+                  right: 0%;
                   top: 55%;
-                  transform: translate(55%, -50%);
+                  transform: translate(55%, -50%) rotate(120deg);
+                  transition: transform 1s;
+                  // z-index: -1;
+                  pointer-events: none;
+
+                  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.6);
 
                   .soc {
                     opacity: 0;
-                    animation: fade-out-display 0.5s linear;
+                    // animation: fade-out-display 0.5s linear;
                     position: absolute;
                     aspect-ratio: 1;
+                    width: 4.25rem;
                     padding: 0.25rem;
-                    transition: 0.4s;
+                    transition: opacity 0.75s;
                     align-items: center;
                     justify-content: center;
                     bottom: 0;
                     left: 0;
-                    transform: translate(-40%, 60%);
+                    // transform: translate(-40%, 60%);
                     pointer-events: none;
+                    // transform: rotate(0deg);
+                    transform: rotate(-270deg);
+
+                    z-index: 1;
+
+                    &:first-child {
+                      left: 0%;
+                    }
+
+                    &:nth-child(2) {
+                      left: 50%;
+                      bottom: -15%;
+                    }
+
+                    &:nth-child(3) {
+                      left: 85%;
+                      bottom: 20%;
+                    }
 
                     i {
-                      transition: color 0.1s, font-size 0.3s;
+                      transition: color 0.5s, font-size 1s;
                       color: var(--tertiary-color);
                       font-size: 0rem;
+                      // font-size: 3rem;
                     }
                   }
                 }
